# blind-uchiha-adya-mcp-hackathon

./: README.md
mcp_servers/python/clients/: requirements.txt
mcp_servers/python/clients/src/: client_and_server_config.py  client_and_server_execution.py
mcp_servers/python/servers/MCP-ANYTYPE/mcp-anytype/: .gitignore  CLIENT_INTEGRATION.md  README.md  pyproject.toml  test_anytype_mcp.py  test_client_integration.py
mcp_servers/python/servers/MCP-ANYTYPE/mcp-anytype/src/mcp_anytype/: __init__.py  anytype.py  prompt.json  server.py  toolhandler.py  tools_anytype.py
mcp_servers/python/servers/MCP-PINGDOM/mcp-pingdom/src/mcp_pingdom/: auth.py  stdio_server.py  tools_checks.py  tools_contacts.py  tools_maintenance.py  tools_probes.py  tools_results.py  tools_summary.py  tools_transactions.py
mcp_servers/python/servers/mcp-google-classroom/: setup.py
mcp_servers/python/servers/mcp-google-classroom/mcp_googleclassroom/: __init__.py  classroom_service.py  classroom_tools.py  server.py  toolhandler.py
mcp_servers_documentation/MCP-ANYTYPE/: credentials.md  demo_videos.md  request_examples.md  server_features.md
mcp_servers_documentation/MCP-APPSIGNAL/: demo_videos.md
mcp_servers_documentation/MCP-PINGDOM/: credentials.md  demo_videos.md  server_features.md
mcp_servers_documentation/MCP-STOCKANALYZER/: demo_videos.md
mcp_servers_documentation/OTHER_MCP_SERVERS/: demo_videos.md
